--- a/less/global.less
+++ b/less/global.less
@@ -15,7 +15,8 @@ h1, h2, h3, h4, h5 {
 }
 
 h1 {
-  font-size: 4rem;
+  font-size: 5rem;
+  margin-bottom: 2%;
 }
 
 h2 {
@@ -38,6 +39,8 @@ img {
   max-width: 100%;
   height: auto;
 }
+
+
 
 .container {
   max-width: 800px;
