--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,16 @@
 // Navigation Styles here
+nav{
+    .flex(space-between, center);
+    width: 50%;
+    @media(@mobile){
+        width: 100%;
+    }
+    a{
+      text-decoration: none;
+      color: @font-color;
+      .font-size(2rem);
+      padding: 2%;
+      width: 25%;    
+      font-weight: 700;
+    }
+  }
